@@ -10,4 +10,4 @@
 set -e
 
 PROGRAM="`basename ${0}`"
-VERSION="1.0~a25"
+VERSION="1.0~a26"
