@@ -90,6 +90,9 @@ do
 				then
 					${LH_ROOT_COMMAND} chown -R `whoami`:`whoami` cache/stages_bootstrap
 				fi
+
+				# Creating stage file
+				Create_stagefile .stage/bootstrap_cache.save
 			fi
 			;;
 	esac
