@@ -1,4 +1,4 @@
-.TH LH_BOOTSTRAP_CDEBOOTSTRAP 1 "27.08.2007" "1.0~a25" "live\-helper"
+.TH LH_BOOTSTRAP_CDEBOOTSTRAP 1 "03.09.2007" "1.0~a26" "live\-helper"
 
 .SH NAME
 lh_bootstrap_cdebootstrap \- erstellt ein Debian-System mit \fIcdebootstrap\fR(1)
