@@ -1,4 +1,4 @@
-.TH LH_BUILD 1 "27.08.2007" "1.0~a25" "live\-helper"
+.TH LH_BUILD 1 "03.09.2007" "1.0~a26" "live\-helper"
 
 .SH NAME
 lh_build \- erstellen eines Live-Systemes
