@@ -1,4 +1,4 @@
-.TH LH_BUILD 1 "2007\-08\-27" "1.0~a25" "live\-helper"
+.TH LH_BUILD 1 "2007\-09\-03" "1.0~a26" "live\-helper"
 
 .SH NAME
 lh_build \- building a live system
