@@ -1,4 +1,4 @@
-.TH LH_CHROOT 1 "2007\-08\-27" "1.0~a25" "live\-helper"
+.TH LH_CHROOT 1 "2007\-09\-03" "1.0~a26" "live\-helper"
 
 .SH NAME
 lh_chroot \- meta\-helper for lh_chroot_*
