@@ -1,4 +1,4 @@
-.TH LIVE\-HELPER 7 "27.08.2007" "1.0~a25" "live\-helper"
+.TH LIVE\-HELPER 7 "03.09.2007" "1.0~a26" "live\-helper"
 
 .SH NAME
 live\-helper \- Debian Live Helper-Programme
