@@ -1,4 +1,4 @@
-.TH LIVE\-HELPER 7 "2007\-08\-27" "1.0~a25" "live\-helper"
+.TH LIVE\-HELPER 7 "2007\-09\-03" "1.0~a26" "live\-helper"
 
 .SH NAME
 live\-helper \- Debian Live helper programs
